Fix carousel align issue

--- a/app/src/app/modules/carousel/carousel.component.scss
+++ b/app/src/app/modules/carousel/carousel.component.scss
@@ -83,8 +83,7 @@ ngb-carousel {
         }
         .second {
             font-size: 12px;
-            width: 120%;
-            // text-align: center;
+            text-align: center;
 
         }
     }
